--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,6 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        android:id="@+id/app_bar_main"
-        layout="@layout/app_bar_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,7 +58,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp">
 
-                <CheckBox
+                <!-- <CheckBox
                     android:id="@+id/checkBox_egg_k"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -225,7 +210,72 @@
                     android:text="아황산류"
                     android:textSize="20sp"
                     android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/> -->
+                <CheckBox
+                    android:id="@+id/checkBox_milk_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="milk"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
                     android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_egg_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="egg"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_fish_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="fish"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_crustaceanShellfishAlU_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="crustacean and shellfish"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_treeNuts_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="tree nuts"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_wheat_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="wheat"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_peanuts_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="peanuts"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+                <CheckBox
+                    android:id="@+id/checkBox_soybeans_u"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="soybeans"
+                    android:textSize="20sp"
+                    android:textColor="#151414"
+                    android:layout_marginBottom="5dp"/>
+
 
 
             </LinearLayout>
