--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="languages">
+        <item>한국어</item>
+        <item>English</item>
+    </string-array>
+    <string-array name="nationality">
+        <item>Korea</item>
+        <item>USA</item>
+    </string-array>
 </resources>
