--- a/app/src/main/res/drawable/button_menu_view.xml
+++ b/app/src/main/res/drawable/button_menu_view.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="10dp"
+    android:shape="rectangle" >
+    <solid android:color="#FF6666" />
+    <corners
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
+</shape>
