--- a/app/src/main/res/drawable/button_view.xml
+++ b/app/src/main/res/drawable/button_view.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <solid android:color = "#f9f9f9" />
+    <corners android:radius = "15dip" />
+    <padding android:bottom = "5dp" android:right = "5dp" android:top = "5dp" android:left = "5dp"/>
 </shape>
