--- a/app/src/main/res/drawable/dialog_title.xml
+++ b/app/src/main/res/drawable/dialog_title.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape = "rectangle">
+    <solid android:color = "#F15656"/>
+    <corners
+        android:topLeftRadius = "10dip"
+        android:topRightRadius = "10dip"/>
+</shape>
