--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id= "@+id/layoutDialog"
+    android:padding="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "match_parent"
+        android:background = "@drawable/dialog_background"
+        android:orientation = "vertical"
+        android:id= "@+id/dialog_background">
+
+        <TextView
+            android:id = "@+id/textTitle"
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:background = "@drawable/dialog_title"
+            android:padding = "10dp"
+            android:textColor = "#ffffff"
+            android:textSize = "18sp"
+            android:textStyle = "bold"
+            android:text = "Result"/>
+        <TextView
+            android:id = "@+id/textMessage"
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_gravity = "center"
+            android:layout_marginTop = "10dp"
+            android:layout_marginBottom = "10dp"
+            android:textSize = "24sp"
+            android:textColor = "#000000"/>
+        <TextView
+            android:id = "@+id/textTitleBottom"
+            android:layout_width = "match_parent"
+            android:layout_height = "20dp"
+            android:paddingLeft = "10dp"
+            android:background = "@drawable/dialog_title_bottom"
+            android:text = "( 0 )"
+            android:textSize = "15sp"
+            android:textColor = "#ffffff"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id = "@+id/btnOK"
+            android:layout_width = "150dp"
+            android:layout_height = "40dp"
+            android:layout_gravity = "center"
+            android:layout_marginTop = "10dp"
+            android:textSize = "20sp"
+            android:background = "@drawable/dialog_button"
+            android:textColor = "#ffffff"
+            android:text = "OK" />
+
+    </LinearLayout>
+</LinearLayout>
